# seamless_interaction

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
filelists/improvised/dev/: metadata.csv
filelists/improvised/test/: metadata.csv
filelists/improvised/train/: metadata.csv
filelists/naturalistic/dev/: metadata.csv
filelists/naturalistic/test/: metadata.csv
notebooks/: hf_load_webdataset.ipynb  hf_upload.ipynb  prepare_batch.ipynb
scripts/: 0_reorganize_dataset.py  1_shard_webdataset.py  2_divide_folders_and_upload.py  2_hf_upload_webdataset.py  3_fixed_upload_additional_annotations.py  3_hf_upload_webdataset.py  __init__.py  constants.py  construct_file_id_tar_archive_mapping.py  dataloader_webdataset.py  download_hf.py  download_s3.py  example_usage.py  run_browser.py  test.py  test_dataloader.py  test_fs2_dataloader.py  upload_multiprocess.py  utils.py
scripts/configs/: test_dataloader_yaml.yaml
src/seamless_interaction/: constants.py  fs.py
src/seamless_interaction/app/: config.py  main.py
utils/: constants.py  dataloader.py  dataloader_utils.py  dataset.py  errors.py  fs.py  fs2_dataset.py  s3_utils.py  torch_dataset.py  utils.py  validations.py
