[project]
name = "seamless-interaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "fairseq2==0.4.5",
    "fsspec>=2025.3.0",
    "jupyterlab>=4.4.3",
    "numpy==1.23",
    "pylance>=0.29.0",
    "ruff>=0.12.0",
    "s3fs>=2025.3.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "webdataset>=1.0.2",
]
